<resources>
    <string name="app_name">Chat Dev-intensive</string>
    <string name="profile_label_rating">Рейтинг</string>
    <string name="profile_label_respect">Уважение</string>
    <string name="profile_hint_repository">Репозиторий</string>
    <string name="profile_hint_about">О себе</string>
    <string name="profile_hint_last_name">Фамилия</string>
    <string name="profile_hint_first_name">Имя</string>
    <string name="error_message">Невалидный адрес репозитория</string>
    <string name="menu_search_title">Поиск</string>
    <string name="snackbar_text">"Вы точно хотите добавить %1s в архив?"</string>
    <string name="snackbar_archive_text">"Восстановить чат с %1s из архива?"</string>
    <string name="archive_title">Архив</string>
</resources>

