<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/sv_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.profile.ProfileActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    >

        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ru.skillbranch.devintensive.ui.custom.AspectRatioImageView
                    android:layout_width="match_parent"
                    android:layout_height="398dp"
                    android:src="@drawable/profile_bg"
                    android:scaleType="centerCrop"
                    app:aspectRatio="1.78"/>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/spacing_normal_16">

                <ImageButton
                        android:id="@+id/btn_switch_theme"
                        android:layout_width="@dimen/btn_round_size_40"
                        android:layout_height="@dimen/btn_round_size_40"
                        android:background="@drawable/btn_round_bg"
                        android:src="@drawable/ic_switch_day_night"
                        android:layout_toLeftOf="@id/iv_avatar"
                        android:layout_marginRight="@dimen/spacing_huge_32"
                        android:layout_marginTop="@dimen/spacing_huge_32"/>

                <ru.skillbranch.devintensive.ui.custom.CircleImageView
                        android:id="@+id/iv_avatar"
                        android:layout_width="@dimen/avatar_round_size"
                        android:layout_height="@dimen/avatar_round_size"
                        android:src="@drawable/avatar_default"
                        android:layout_centerHorizontal="true"/>

                <ImageButton
                        android:id="@+id/btn_edit"
                        android:layout_width="@dimen/btn_round_size_40"
                        android:layout_height="@dimen/btn_round_size_40"
                        android:background="@drawable/btn_round_bg"
                        android:src="@drawable/ic_edit_black_24dp"
                        android:layout_toRightOf="@id/iv_avatar"
                        android:layout_marginLeft="@dimen/spacing_huge_32"
                        android:layout_marginTop="@dimen/spacing_huge_32"/>
                <TextView
                        android:id="@+id/tv_nick_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iv_avatar"
                        style="@style/Profile.Header.Nickname"
                        android:layout_centerHorizontal="true"
                        android:text="John Doe"/>
                <TextView
                        android:id="@+id/tv_rank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_nick_name"
                        android:layout_centerHorizontal="true"
                        style="@style/Profile.Header.Rank"
                        android:text="Junior Android Developer"/>

            </RelativeLayout>

        </FrameLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="?attr/colorAccentedSurface">

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:paddingTop="@dimen/spacing_normal_16"
                    android:paddingBottom="@dimen/spacing_normal_16">
                <TextView
                        android:id="@+id/tv_rating"
                        android:text="0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Profile.Metrics.Value"
                        android:drawableLeft="@drawable/ic_sp_24"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Profile.Metrics.Label"
                        android:text="@string/profile_label_rating"/>

            </LinearLayout>

            <View android:layout_width="1dp"
                  android:layout_height="match_parent"
                  android:layout_marginTop="@dimen/spacing_normal_16"
                  android:layout_marginBottom="@dimen/spacing_normal_16"
                  android:background="?attr/colorDivider"/>

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:paddingTop="@dimen/spacing_normal_16"
                    android:paddingBottom="@dimen/spacing_normal_16">
                <TextView
                        android:id="@+id/tv_respect"
                        android:text="0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Profile.Metrics.Value"
                        android:drawableLeft="@drawable/ic_respect_24"

                />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/Profile.Metrics.Label"
                        android:text="@string/profile_label_respect"
                />
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout
                style="@style/Profile.InfoItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:id="@+id/ic_avatar"
                    android:layout_width="@dimen/btn_round_size_40"
                    android:layout_height="@dimen/btn_round_size_40"
                    android:src="@drawable/ic_avatar"/>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_first_name"
                    android:layout_toRightOf="@id/ic_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_normal_16">

                <EditText
                        style="@style/Profile.EditText.Single"
                        android:id="@+id/et_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_hint_first_name"
                        android:inputType="textPersonName"
                        android:imeOptions="actionNext"
                />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/til_second_name"
                    android:layout_below="@id/til_first_name"
                    android:layout_toRightOf="@id/ic_avatar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_normal_16">

                <EditText
                        style="@style/Profile.EditText.Single"
                        android:id="@+id/et_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_hint_last_name"
                        android:inputType="textPersonName"
                        android:imeOptions="actionNext"/>

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="@color/color_divider_dark"
              android:layout_marginLeft="@dimen/space_maximum_72"/>

        <LinearLayout
                style="@style/Profile.InfoItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <ImageView
                    android:layout_width="@dimen/btn_round_size_40"
                    android:layout_height="@dimen/btn_round_size_40"
                    android:src="@drawable/ic_about"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/wr_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_normal_16">

                <EditText
                        android:id="@+id/et_about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Profile.EditText.MultiLine"
                        android:hint="@string/profile_hint_about"
                        android:inputType="textMultiLine"
                        android:imeOptions="actionNext"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="?attr/colorDivider"
              android:layout_marginLeft="@dimen/space_maximum_72"/>

        <LinearLayout
                style="@style/Profile.InfoItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <ImageView
                    android:layout_width="@dimen/btn_round_size_40"
                    android:layout_height="@dimen/btn_round_size_40"
                    android:src="@drawable/ic_repo"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/wr_repository"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_normal_16"
            >

                <EditText
                        android:id="@+id/et_repository"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Profile.EditText.Single"
                        android:hint="@string/profile_hint_repository"
                        android:inputType="textUri"
                        android:imeOptions="actionDone"/>

            </com.google.android.material.textfield.TextInputLayout>
            <ImageView
                    android:id="@+id/ic_eye"
                    android:layout_marginLeft="@dimen/spacing_normal_16"
                    android:layout_width="@dimen/spacing_large_24"
                    android:layout_height="@dimen/spacing_large_24"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_eye_24dp"/>


        </LinearLayout>


    </LinearLayout>
</ScrollView>